# testdocs

./: .envrc  .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml
data/: bardata.yml  foodata.yml  sitedata.yml
docs/: index.md
lib/: bar.py  foo.py  site.py
report/: output.json  pytest_html_report.html
report/archive/: output_1688411077.334045.json  output_1688411216.982205.json  output_1688412562.65782.json  output_1688412732.155272.json  output_1688414551.7982972.json  output_1688414562.3172748.json  output_1688416813.0825212.json  output_1688416875.938389.json  output_1688416890.539965.json
search/: search_index.json
tests/: conftest.py  test_bardata.py  test_foodata.py  test_sitedata.py  test_yaml_data.py  utils.py
