[tool.poetry]
name = "testdocs"
version = "0.1.0"
description = ""
authors = ["Matthew Callaway <matt.callaway@bayer.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.18"
mkdocs-material-extensions = "^1.1.1"
mkdocs-git-authors-plugin = "^0.7.2"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"
mkdocs-macros-plugin = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-html = "^3.2.0"
isort = "^5.12.0"
autopep8 = "^2.0.2"
flake8 = "^6.0.0"
black = "^23.3.0"
pytest-html-reporter = "^0.2.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
